@@ -115,3 +115,5 @@ require_relative 'excel_functions/ln'
 require_relative 'excel_functions/iserr'
 
 require_relative 'excel_functions/npv'
+
+require_relative 'excel_functions/iserror'
